[package]
name = "upcache"
version = "0.1.0"
authors = ["Michal Hornický <mhornick@redhat.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
env_logger = "0.7.1"
regex = { version = "1.3.1"}
serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "*" }
yaml = { package = "serde_yaml", version = "*"}
serde-aux = "0.6.1"
fnv = "1.0.3"
rusqlite = "*"